# PoPE-pytorch

./: CITATION.cff  README.md  context7.json  pyproject.toml  train_enwik8.py
PoPE_pytorch/: __init__.py  attention.py  pope.py  pope_nd.py  triton_pope.py  triton_pope_flash_attn.py
src/PoPE_pytorch/: __init__.py  attention.py  pope.py  pope_nd.py  theTypes.py  triton_pope.py  triton_pope_flash_attn.py
tests/: test_flash_attn.py  test_triton.py
