[project]
name = "PoPE-pytorch"
version = "0.1.4"
description = "PoPE"
readme = "README.md"
requires-python = ">= 3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Phil Wang", email = "lucidrains@gmail.com" }]
keywords = [
  "artificial intelligence",
  "deep learning",
  "positional embedding",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["einops>=0.8.1", "torch>=2.5", "torch-einops-utils>=0.0.14"]

[project.urls]
Homepage = "https://pypi.org/project/PoPE-pytorch/"
Repository = "https://github.com/lucidrains/PoPE-pytorch"

[project.optional-dependencies]
examples = []
test = ["pytest"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "PoPE_pytorch",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["PoPE_pytorch"]

[tool.pytest]
pythonpath = ["."]
