[project]
name = "PoPE-pytorch"
version = "0.1.4"
description = "Typed and documented fork of lucidrains/PoPE-pytorch."
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-NC-4.0"
authors = [
  { name = "Phil Wang", email = "lucidrains@gmail.com" },
  { name = "Hunter Hogan", email = "HunterHogan@pm.me" }
]
keywords = [
  "artificial intelligence",
  "deep learning",
  "positional embedding",
]
dependencies = [
  "einops>=0.8.2",
  "hunterMakesPy>=0.5.3",
  "torch>=2.11.0",
  "torch-einops-kit>=0.1.2",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Documentation = "https://context7.com/hunterhogan/pope-pytorch"
Donate = "https://www.patreon.com/integrated"
Homepage = "https://github.com/hunterhogan/PoPE-pytorch"
Issues = "https://github.com/hunterhogan/PoPE-pytorch/issues"
Repository = "https://github.com/hunterhogan/PoPE-pytorch"

[dependency-groups]
dev = [
  "pytest-cov>=7.1.0",
]
testing = [
  "pytest>=9.0.3",
  "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
